--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /*
 Theme Name: Realty
-Theme URI: https://awothemes.pro/themes/realty
+Theme URI: http://awothemes.pro/themes/realty
 Author: Awothemes
-Author URI: https://awothemes.pro
+Author URI: http://awothemes.pro
 Description: Realty is a WordPress theme for real estate projects with a clean and responsive design, that looks perfect on desktop, tablet or mobile screens.
-Version: 1.0.1
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Version: 1.0.2
+License: GNU General Public License v3 or later
+License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: realty
-Tags: black, white, gray, light, dark, custom-background, two-columns, right-sidebar, theme-options, responsive-layout, fixed-layout, translation-ready, rtl-language-support, editor-style, threaded-comments, sticky-post, post-formats, photoblogging, custom-menu, custom-header
+Tags: custom-background, two-columns, right-sidebar, theme-options, grid-layout, translation-ready, threaded-comments, sticky-post, post-formats, custom-menu, blog, news
 
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
+Realty WordPress theme, Copyright (C) 2014 AwoThemes.pro
+Realty WordPress theme is licensed under the GNU General Public License
 
 Realty is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
